[tool.poetry]
name = "concepCy"
version = "0.1.0"
description = "💫 SpaCy wrapper for ConceptNet 💫"
authors = ["JulesBelveze <jules.belveze@hotmail.fr>"]
homepage = "https://github.com/JulesBelveze/concepcy"
repository = "https://github.com/JulesBelveze/concepcy"
readme = "README.md"
keywords = ["nlp", "spacy", "conceptnet"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing"
]
include = [
    "figures/"
]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.3.0"
pydantic = "^1.9.1"
request-boost = "^0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
